--- a/src/assets/styles/_common.scss
+++ b/src/assets/styles/_common.scss
@@ -1,14 +1,144 @@
 @import "variable";
 
 body {
+  background-color: #f4f6f8;
   main {
+    position: relative;
+    z-index: 99;
+    height: 100vh;
+
     > div {
       padding: 0px 0px 0px 0px;
     }
   }
 
+  header {
+    padding: 36px 0px;
+
+    .logoBox {
+      display: flex;
+      align-items: center;
+      img {
+        vertical-align: middle;
+      }
+    }
+
+    .logoWrapper {
+      color: $white;
+
+      p {
+        display: inline;
+        margin-left: 4px;
+        mix-blend-mode: normal;
+        opacity: 0.5;
+        font-weight: $lightFont;
+      }
+    }
+  }
+
+  nav {
+    padding-bottom: 40px;
+  }
+
   .disabled {
     opacity: 0.4;
     pointer-events: none;
+  }
+
+  .mainBg {
+    position: fixed;
+    left: 0px;
+    top: 0px;
+    z-index: 9;
+    background: $dark_purple;
+    background: $primay_bg;
+    height: 240px;
+    width: 100%;
+  }
+
+  .notification {
+    position: relative;
+    cursor: pointer;
+    .notificationCount {
+      position: absolute;
+      right: -13px;
+      top: -22px;
+      font-weight: 600;
+      border-radius: 50%;
+      width: 24px;
+      height: 24px;
+      background: $dark_blue;
+      display: flex;
+      text-align: center;
+      justify-content: center;
+      align-items: center;
+      color: $white;
+      vertical-align: middle;
+      line-height: 16px;
+      border: 2px solid #92a0ff;
+    }
+  }
+
+  .profileDropdownWrapper {
+    p {
+      color: $white;
+    }
+    .dropDownIcon {
+      cursor: pointer;
+      width: 16px;
+      height: 16px;
+      border-radius: 50%;
+      display: grid;
+
+      place-items: center;
+      background-color: $dark_blue;
+    }
+  }
+
+  .navListWrapper {
+    li {
+      padding: 8px 16px 10px;
+      border-radius: 17px;
+      margin-right: 30px;
+      &.navListItem {
+        cursor: pointer;
+        color: $white;
+        font-weight: $mediumFont;
+        letter-spacing: $smallLS;
+      }
+
+      &.active,
+      &:hover {
+        background-color: $dark_blue;
+      }
+    }
+  }
+
+  .cardBg {
+    background-color: $white;
+    border-radius: 8px;
+    box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.06);
+  }
+
+  .tagsWrapper {
+    padding: 7px 12px;
+    max-width: fit-content;
+    border-radius: 16px;
+    text-transform: uppercase;
+    &.eth {
+      background-color: rgba(98, 113, 210, 0.1);
+      color: $dark_blue;
+    }
+
+    &.btc {
+      background-color: rgba(210, 134, 98, 0.1);
+      color: $orange;
+    }
+
+    &.default {
+      background-color: rgba(121, 130, 139, 0.1);
+      color: $gray_dark;
+      text-transform: lowercase;
+    }
   }
 }
