--- a/src/assets/styles/home.module.scss
+++ b/src/assets/styles/home.module.scss
@@ -11,9 +11,14 @@ body {
   }
 
   .earningWrapper {
-    padding: 24px 24px 32px;
+    padding: 24px 24px;
 
     height: 100%;
+
+    h6 {
+      font-weight: $regularFont;
+      letter-spacing: $extraLargeLS;
+    }
 
     .currencyWrapper {
       display: flex;
@@ -40,25 +45,45 @@ body {
       padding: 20px 0 0;
       border-top: 1px solid $borderColor;
 
+      .header {
+        letter-spacing: $extraLargeLS;
+      }
+
       p {
         padding-bottom: 16px;
       }
     }
 
     .progressWrapper {
+      font-weight: $regularFont;
       b {
+        margin-right: 4px;
         color: $green;
         font-weight: $regularFont;
       }
     }
   }
 
-  .suggestedProjectsWrapper {
-    .suggestedProjectsHeader {
+  .infoWrapper {
+    .infoHeaderWrapper {
       padding-bottom: 20px;
+
+      h3 {
+        letter-spacing: $smallLS;
+      }
+
+      p {
+        cursor: pointer;
+        letter-spacing: $extraLargeLS;
+
+        &:hover {
+          text-decoration: underline;
+        }
+      }
     }
 
     .suggestedProjectsList {
+      margin-bottom: 44px;
       .suggestedProjectCard {
         padding: 24px 24px;
         .description {
@@ -69,6 +94,98 @@ body {
         .bottomInfo {
           border-top: 1px solid $borderColor;
           padding-top: 16px;
+        }
+      }
+    }
+  }
+
+  .slackBannerWrapper {
+    margin-bottom: 44px;
+    padding: 42px 46px;
+    border-radius: 10px;
+    background: linear-gradient(201.71deg, #8f9df8 -80.88%, #92a0ff 203.65%);
+    h2 {
+      color: $white;
+    }
+
+    p {
+      color: rgba(255, 255, 255, 0.75);
+      font-weight: $regularFont;
+    }
+  }
+
+  .activityWrapper {
+    padding: 24px;
+
+    .usersListWrapper {
+      padding-top: 16px;
+      ul {
+        li {
+          padding-bottom: 36px;
+
+          &:last-child {
+            padding-bottom: 24px;
+          }
+          position: relative;
+          z-index: 999;
+          &:after {
+            position: absolute;
+            left: 23px;
+            top: 55px;
+            content: "";
+            width: 1px;
+            height: calc(100% - 60px);
+            background-color: #e6ebf0;
+            transform: matrix(-1, 0, 0, 1, 0, 0);
+            z-index: 9;
+          }
+        }
+      }
+    }
+  }
+
+  .earnersWrapper {
+    padding: 24px 24px 4px;
+
+    h6 {
+      color: $purple;
+      font-weight: $mediumFont;
+      cursor: pointer;
+    }
+
+    .earnersList {
+      ul {
+        li {
+          width: 100%;
+          position: relative;
+          margin-left: 28px;
+          counter-increment: item;
+          padding: 20px 0;
+
+          &:before {
+            content: counters(item, ".") ". ";
+            position: absolute;
+            left: -26px;
+            top: 30px;
+            .earnerItem {
+              padding: 20px 0;
+              border-bottom: 1px solid $borderColor;
+            }
+          }
+          &::after {
+            content: "";
+            position: absolute;
+            width: 100%;
+            height: 1px;
+            background-color: $borderColor;
+            left: -30px;
+            top: 0px;
+          }
+          &:first-child {
+            &::after {
+              display: none;
+            }
+          }
         }
       }
     }
