--- a/src/assets/styles/_common.scss
+++ b/src/assets/styles/_common.scss
@@ -153,5 +153,20 @@ body {
     & > div {
       width: 100%;
     }
+
+    .userImage {
+      position: relative;
+
+      img {
+        position: relative;
+        z-index: 999;
+      }
+      .subImage {
+        position: absolute;
+        left: -30px;
+        top: -30px;
+        z-index: 9;
+      }
+    }
   }
 }
