--- a/src/assets/styles/home.module.scss
+++ b/src/assets/styles/home.module.scss
@@ -120,6 +120,7 @@ body {
     .usersListWrapper {
       padding-top: 16px;
       ul {
+        margin-left: 24px;
         li {
           padding-bottom: 36px;
 
