--- a/src/assets/styles/home.module.scss
+++ b/src/assets/styles/home.module.scss
@@ -192,3 +192,23 @@ body {
     }
   }
 }
+
+@media (min-width: 0px) and (max-width: 599px) {
+  body {
+    .slackBannerWrapper {
+      margin-bottom: 28px;
+      padding: 32px 16px 24px;
+      text-align: center;
+    }
+
+    .earningWrapper {
+      padding: 24px 12px;
+
+      h6 {
+        font-weight: $regularFont;
+        letter-spacing: $extraLargeLS;
+        padding-bottom: 16px;
+      }
+    }
+  }
+}
